tests/baselines/reference/parseInvalidNames.errors.txt
parseInvalidNames.ts(1,1): error TS2304: Cannot find name 'namespace'.
parseInvalidNames.ts(1,11): error TS2819: Namespace name cannot be '100'.
parseInvalidNames.ts(1,15): error TS1005: ';' expected.
parseInvalidNames.ts(2,1): error TS2304: Cannot find name 'interface'.
parseInvalidNames.ts(2,11): error TS2427: Interface name cannot be '100'.
parseInvalidNames.ts(2,15): error TS1005: ';' expected.
parseInvalidNames.ts(3,1): error TS2304: Cannot find name 'type'.
parseInvalidNames.ts(3,6): error TS2457: Type alias name cannot be '100'.
parseInvalidNames.ts(3,10): error TS1005: ';' expected.
parseInvalidNames.ts(5,1): error TS1128: Declaration or statement expected.
parseInvalidNames.ts(5,8): error TS2304: Cannot find name 'namespace'.
parseInvalidNames.ts(5,18): error TS2819: Namespace name cannot be '100'.
parseInvalidNames.ts(5,22): error TS1005: ';' expected.
parseInvalidNames.ts(6,1): error TS1128: Declaration or statement expected.
parseInvalidNames.ts(6,8): error TS2304: Cannot find name 'interface'.
parseInvalidNames.ts(6,18): error TS2427: Interface name cannot be '100'.
parseInvalidNames.ts(6,22): error TS1005: ';' expected.
parseInvalidNames.ts(7,1): error TS1128: Declaration or statement expected.
parseInvalidNames.ts(7,8): error TS2304: Cannot find name 'type'.
parseInvalidNames.ts(7,13): error TS2457: Type alias name cannot be '100'.
parseInvalidNames.ts(7,17): error TS1005: ';' expected.


==== parseInvalidNames.ts (21 errors) ====
    namespace 100 {}
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'namespace'.
              ~~~
!!! error TS2819: Namespace name cannot be '100'.
                  ~
!!! error TS1005: ';' expected.
    interface 100 {}
    ~~~~~~~~~
!!! error TS2304: Cannot find name 'interface'.
              ~~~
!!! error TS2427: Interface name cannot be '100'.
                  ~
!!! error TS1005: ';' expected.
    type 100 {}
    ~~~~
!!! error TS2304: Cannot find name 'type'.
         ~~~
!!! error TS2457: Type alias name cannot be '100'.
             ~
!!! error TS1005: ';' expected.
    
    export namespace 100 {}
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~~~~~~~~~
!!! error TS2304: Cannot find name 'namespace'.
                     ~~~
!!! error TS2819: Namespace name cannot be '100'.
                         ~
!!! error TS1005: ';' expected.
    export interface 100 {}
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~~~~~~~~~
!!! error TS2304: Cannot find name 'interface'.
                     ~~~
!!! error TS2427: Interface name cannot be '100'.
                         ~
!!! error TS1005: ';' expected.
    export type 100 {}
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
           ~~~~
!!! error TS2304: Cannot find name 'type'.
                ~~~
!!! error TS2457: Type alias name cannot be '100'.
                    ~
!!! error TS1005: ';' expected.
    